--- a/index.html
+++ b/index.html
@@ -6,22 +6,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <ul>
-            <li id="one" class="hot"><em>fresh</em> figs</li>
-            <li id="two" class="hot">pine nuts</li>
-            <li id="three" class="hot">honey</li>
-            <li id="four">balsamic vinegar</li>
-        </ul>
+    <div id="page">
+          <h1 id="header">List</h1>
+          <h2>Buy groceries <span id="counter"></span></h2>
+            <ul>
+                <li id="one" class="hot"><em>fresh</em> figs</li>
+                <li id="two" class="hot">pine nuts</li>
+                <li id="three" class="hot">honey</li>
+                <li id="four">balsamic vinegar</li>
+            </ul>
 
-        <div id="newItemButton">
-            <button href="#" id="showForm">new item</button>
-        </div>
+            <div id="newItemButton">
+                <button href="#" id="showForm">new item</button>
+            </div>
 
-        <form id="newItemForm">
-            <input type="text" id="itemDescription" placeholder="Add description" />
-            <input type="submit" id="add" value="add" />
-        </form>
-
+            <form id="newItemForm">
+                <input type="text" id="itemDescription" placeholder="Add description" />
+                <input type="submit" id="add" value="add" />
+            </form>
+    </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script type="text/javascript" src="scripts.js"></script>
     </body>
