--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
         <meta charset="utf-8">
         <title>jQuery Todo App</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./reset.css">
+        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400|Montserrat" rel="stylesheet">
+        <link rel="stylesheet" href="./styles.css">
+
     </head>
     <body>
     <div id="page">
-          <h1 id="header">List</h1>
-          <h2>Buy groceries <span id="counter"></span></h2>
+        <div class="header-container">
+            <h1 id="header">List</h1>
+            <h2>Buy groceries <span id="counter"></span></h2>
+        </div>
             <ul>
                 <li id="one" class="hot"><em>fresh</em> figs</li>
                 <li id="two" class="hot">pine nuts</li>
