--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta charset="utf-8">
         <title>jQuery Todo App</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./reset.css">
+        <!-- <link rel="stylesheet" href="./reset.css"> -->
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400|Montserrat" rel="stylesheet">
-        <link rel="stylesheet" href="./styles.css">
+        <link rel="stylesheet" href="./css/styles.css">
 
     </head>
     <body>
-    <div id="page">
+    <div id="page" class="main">
         <div class="header-container">
             <h1 id="header">List</h1>
             <h2>Buy groceries <span id="counter"></span></h2>
