--- a/index.html
+++ b/index.html
@@ -6,31 +6,40 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- <link rel="stylesheet" href="./reset.css"> -->
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400|Montserrat" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
         <link rel="stylesheet" href="./css/styles.css">
 
     </head>
     <body>
-    <div id="page" class="main">
-        <div class="header-container">
-            <h1 id="header">List</h1>
-            <h2>Buy groceries <span id="counter"></span></h2>
-        </div>
-            <ul>
-                <li id="one" class="hot"><em>fresh</em> figs</li>
-                <li id="two" class="hot">pine nuts</li>
-                <li id="three" class="hot">honey</li>
-                <li id="four">balsamic vinegar</li>
-            </ul>
+        <main id="page" class="main">
+            <!-- HEADER SECTION -->
+            <header class="header-container">
+                <h1 id="header">To<span>Do</span> <i class="material-icons">line_style</i></h1>
+                <h2>List <span id="counter"></span></h2>
+            </header>
 
-            <div id="newItemButton">
-                <button href="#" id="showForm">new item</button>
-            </div>
+            <!-- LIST OF ITEMS -->
+                <ul>
+                    <li id="one">fresh figs<img src="./img/checkmark.svg" alt="check mark"/></li>
+                    <li id="two">pine nuts<img src="./img/checkmark.svg" alt="check mark"/></li>
+                    <li id="three">honey<img src="./img/checkmark.svg" alt="check mark"/></li>
+                    <li id="four">balsamic vinegar<img src="./img/checkmark.svg" alt="check mark"/></li>
+                </ul>
 
-            <form id="newItemForm">
-                <input type="text" id="itemDescription" placeholder="Add description" />
-                <input type="submit" id="add" value="add" />
-            </form>
-    </div>
+                <div id="newItemButton">
+                    <button href="#" id="showForm">new item <i class="material-icons">add_circle</i></button>
+                </div>
+
+                <form id="newItemForm">
+                    <input type="text" id="itemDescription" placeholder="Add description" />
+                    <input type="submit" id="add" value="add" />
+                </form>
+
+                <div id="resetButton">
+                    <button type="button" name="reset">Reset <i class="material-icons">autorenew</i></button>
+                </div>
+        </main>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script type="text/javascript" src="scripts.js"></script>
     </body>
