--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <!-- HEADER SECTION -->
             <header class="header-container">
                 <h1 id="header">To<span>Do</span> <i class="material-icons">line_style</i></h1>
+                <p class="sub-title">Simplify You</p>
                 <h2>List <span id="counter"></span></h2>
             </header>
 
@@ -39,6 +40,10 @@
                 <div id="resetButton">
                     <button type="button" name="reset">Reset <i class="material-icons">autorenew</i></button>
                 </div>
+                <footer>
+                    <p>Built by Elliot Richardson</p>
+                    <p>Nashville, Tn</p>
+                </footer>
         </main>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script type="text/javascript" src="scripts.js"></script>
