--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
             <!-- LIST OF ITEMS -->
                 <ul>
-                    <li id="one">fresh figs<img src="./img/checkmark.svg" alt="check mark"/></li>
-                    <li id="two">pine nuts<img src="./img/checkmark.svg" alt="check mark"/></li>
-                    <li id="three">honey<img src="./img/checkmark.svg" alt="check mark"/></li>
-                    <li id="four">balsamic vinegar<img src="./img/checkmark.svg" alt="check mark"/></li>
+                    <li id="one">Change Oil<img src="./img/checkmark.svg" alt="check mark"/></li>
+                    <li id="two">Clothes Shopping<img src="./img/checkmark.svg" alt="check mark"/></li>
+                    <li id="three">Work @3:30pm<img src="./img/checkmark.svg" alt="check mark"/></li>
+                    <li id="four">Pay Cable Bill<img src="./img/checkmark.svg" alt="check mark"/></li>
                 </ul>
 
                 <div id="newItemButton">
@@ -41,7 +41,8 @@
                     <button type="button" name="reset">Reset <i class="material-icons">autorenew</i></button>
                 </div>
                 <footer>
-                    <p>Built by Elliot Richardson</p>
+                    <div class="divider"></div>
+                    <p>Built by: <span>Elliot Richardson</span></p>
                     <p>Nashville, Tn</p>
                 </footer>
         </main>
