added gradients to design and made sticky footer for expanding list items

--- a/index.html
+++ b/index.html
@@ -40,12 +40,18 @@
                 <div id="resetButton">
                     <button type="button" name="reset">Reset <i class="material-icons">autorenew</i></button>
                 </div>
-                <footer>
+                <!-- <footer>
                     <div class="divider"></div>
                     <p>Built by: <span>Elliot Richardson</span></p>
                     <p>Nashville, Tn</p>
-                </footer>
+                </footer> -->
         </main>
+        <footer>
+            <h2>To<span>Do</span></h2>
+            <div class="divider"></div>
+            <p>Built by: <span>Elliot Richardson</span></p>
+            <p>Nashville, Tn</p>
+        </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <script type="text/javascript" src="scripts.js"></script>
     </body>
